# owl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/plans/: 2026-03-05-parliament-of-owls-design.md
skills/owl/: SKILL.md
src/owl/: __init__.py  config.py  council.py  github.py  models.py  output.py  prompts.py  tui.py
src/owl/cli/: main.py
src/owl/providers/: base.py  deepseek.py  google_deep.py  llm_provider.py  openai_deep.py  perplexity.py  registry.py  retry.py  xai.py
tests/: test_cli.py  test_config.py  test_council.py  test_github.py  test_models.py  test_output.py  test_prompts.py  test_providers.py  test_retry.py
